--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ai-sdk/react": "^2.0.87",
     "@langchain/core": "^1.0.2",
     "@langchain/google-genai": "^1.0.0",
+    "@langchain/textsplitters": "^1.0.0",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-dialog": "^1.1.15",
