--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ai-sdk/react": "^2.0.87",
+    "@google/genai": "^1.28.0",
     "@langchain/core": "^1.0.2",
     "@langchain/google-genai": "^1.0.0",
     "@langchain/textsplitters": "^1.0.0",
@@ -30,6 +31,7 @@
     "cmdk": "^1.1.1",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.552.0",
+    "mongoose": "^8.19.3",
     "motion": "^12.23.24",
     "nanoid": "^5.1.6",
     "next": "16.0.1",
